<resources>
    <string name="app_name">SteakSurabaya</string>
    <string name="slogan">Dimanapun anda berada</string>
    <string name="sloogan">Kami akan selalu ada untuk anda</string>
    <string name="nama">username </string>
    <string name="tlpn">handphone</string>
    <string name="sandi">password</string>
    <string name="alamat">alamat</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="email">email</string>


    <string name="title_activity_beranda_nav">BerandaNav</string>
    <string name="title_home">Home</string>
    <string name="title_reservasi">Reservasi</string>
    <string name="title_keranjang">Keranjang</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profil">Profil</string>
    <string name="title_activity_beranda_navigation">BerandaNavigation</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
